# bay-api

./: .env.sample  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
src/: app.ts  contracts.rs  main.rs  schema.graphql  schema.rs
src/abis/: argent-wallet-detector.ts
src/abis/solar/: solarDistributorV2.json
src/artifacts/contracts/WarpIn.sol/: WarpInV1.json
src/artifacts/contracts/WarpOut.sol/: WarpOutV1.json
src/artifacts/contracts/base/WarpBase.sol/: WarpBaseV1.dbg.json  WarpBaseV1.json
src/artifacts/contracts/interface/solarbeam/IERC20.sol/: IERC20Solar.json
src/artifacts/contracts/interface/solarbeam/ISolarCallee.sol/: ISolarCallee.json
src/artifacts/contracts/interface/solarbeam/ISolarERC20.sol/: ISolarERC20.json
src/artifacts/contracts/interface/solarbeam/ISolarFactory.sol/: ISolarFactory.json
src/artifacts/contracts/interface/solarbeam/ISolarPair.sol/: ISolarPair.json
src/artifacts/contracts/interface/solarbeam/IWETH.sol/: IWETH.json
src/artifacts/hardhat/console.sol/: console.dbg.json
src/db/: mod.rs
src/lib/: constants.ts
src/models/: addLiquidityEvent.ts  asset.ts  autocompoundEvent.ts  autocompoundSetupEvent.ts  claimRewardsEvent.ts  farm.ts  pool.ts  removeLiquidityEvent.ts  stakeEvent.ts  token.ts  unstakeEvent.ts  walletConnectEvent.ts  xcmpTask.ts
src/resolvers/: assets.resolver.ts  farms.resolver.ts  index.ts  pools.resolver.ts  tracking.resolver.ts  xcmpTasks.resolver.ts
src/services/: database.service.ts
src/tasks/: mangata.ts
src/util/: util.ts
src/utils/: addresses.rs
src/utils/abis/: abis.rs
(+5 files in other folders)
