[package]
name = "bay-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper.git" , default-features = true, features = ["expose-test-schema", "serde_json"]}
juniper_rocket = { git = "https://github.com/graphql-rust/juniper.git" }
rocket = "0.5.0-rc.2"
